Moar book sprites

--- a/[Si] Book Challenge/i18n/default.json
+++ b/[Si] Book Challenge/i18n/default.json
@@ -9,7 +9,7 @@
 	"Si.BC.NatGeoBookName": "National Geography #34",
 	"Si.BC.NatGeoBookDesc": "There's a rog covered in leaves on the cover.",
 	"Si.BC.NatGeoBookContent": "^^Book contents here",
-	"Si.BC.PennyBookName": "Name",
+	"Si.BC.PennyBookName": "The Mystery Of Firebrook Manor",
 	"Si.BC.PennyBookDesc": "Desc",
 	"Si.BC.PennyBookContent": "^^Contents",
 	"Si.BC.PHBBookName": "Player's Handbook",
