Set up book entries

--- a/[Si] Book Challenge/i18n/default.json
+++ b/[Si] Book Challenge/i18n/default.json
@@ -1,18 +1,126 @@
 {
 	// Sample length "^^Book contents here testing testing testing 1 testing testing testing 2 testing testing testing 3 testing testing testing 4 testing testing testing 5 testing testing testing 6 testing testing testing 7 testing testing testing 8 testing testing testing 9 testing testing testing 10 ^^testing testing testing 11 testing testing testing 12 testing testing testing 13",
+	"Si.BC.SaltBookName": "101 Gourmand Tomato Salt Recipes",
+	"Si.BC.SaltBookDesc": "Book description here",
+	"Si.BC.SaltBookContent": "Book contents here",
+	"Si.BC.AdvMagBookName": "Adventurer Magazine #223",
+	"Si.BC.AdvMagBookDesc": "Book description here",
+	"Si.BC.AdvMagBookContent": "Book contents here",
+	"Si.BC.AdvHealBookName": "Adventures In Healing: The Field Medic's Handbook",
+	"Si.BC.AdvHealBookDesc": "Book description here",
+	"Si.BC.AdvHealBookContent": "Forward:^Some choose to brave the dangers of the world, fighting monsters, spirits, and the very essence of evil itself. Others prefer the safety and comfort of their clinics, where they can enjoy some nice coffee, read a good book, and wait for members of the first group to be rolled in on stretchers, wounded and regretting every decision they've ever made. If you are a member of the second group, this book is for you.",
+	"Si.BC.AardvarkBookName": "The Amazing Aardvark-Man! #41",
+	"Si.BC.AardvarkBookDesc": "Book description here",
+	"Si.BC.AardvarkBookContent": "Book contents here",
+	"Si.BC.ArchGuideName": "The Archaeologist's Field Guide",
+	"Si.BC.ArchGuideDesc": "Book description here",
+	"Si.BC.ArchGuideContent": "Book contents here",
 	"Si.BC.AstroBookName": "Astronomic Magazine #76",
 	"Si.BC.AstroBookDesc": "There's a picture of a galaxy on the cover.",
 	"Si.BC.AstroBookContent": "^^Book contents here",
+	"Si.BC.BatMatBookName": "The Bat on the Mat",
+	"Si.BC.BatMatBookDesc": "Book description here",
+	"Si.BC.BatMatBookContent": "Book contents here",
+	"Si.BC.BetterHomesBookName": "Better Homes and Gardens New Cook Book",
+	"Si.BC.BetterHomesBookDesc": "Book description here",
+	"Si.BC.BetterHomesBookContent": "Book contents here",
+	"Si.BC.YobaBookName": "Book of Yoba",
+	"Si.BC.YobaBookDesc": "Book description here",
+	"Si.BC.YobaBookContent": "Book contents here",
+	"Si.BC.BookkeepingBookName": "Bookkeeping for Local Stores",
+	"Si.BC.BookkeepingBookDesc": "Book description here",
+	"Si.BC.BookkeepingBookContent": "Book contents here",
+	"Si.BC.CSharpBookName": "The C# Yellow Book",
+	"Si.BC.CSharpBookDesc": "Book description here",
+	"Si.BC.CSharpBookContent": "Book contents here",
+	"Si.BC.CampfireBookName": "Camfire Cooking",
+	"Si.BC.CampfireBookDesc": "Book description here",
+	"Si.BC.CampfireBookContent": "Book contents here",
+	"Si.BC.ChickenBookName": "Chicken Rearing for Dummies",
+	"Si.BC.ChickenBookDesc": "Book description here",
+	"Si.BC.ChickenBookContent": "Book contents here",
+	"Si.BC.CrystalBookName": "Crystallic Symbolism",
+	"Si.BC.CrystalBookDesc": "Book description here",
+	"Si.BC.CrystalBookContent": "Book contents here",
 	"Si.BC.DMGBookName": "Dungeon Master's Guide",
 	"Si.BC.DMGBookDesc": "A guide for hosting a tabletop game.",
 	"Si.BC.DMGBookContent": "^^Contents",
-	"Si.BC.NatGeoBookName": "National Geography #34",
-	"Si.BC.NatGeoBookDesc": "There's a rog covered in leaves on the cover.",
-	"Si.BC.NatGeoBookContent": "^^Book contents here",
-	"Si.BC.PennyBookName": "The Mystery Of Firebrook Manor",
+	"Si.BC.ToolboxBookName": "The Engineer's Toolbox",
+	"Si.BC.ToolboxBookDesc": "Book description here",
+	"Si.BC.ToolboxBookContent": "Book contents here",
+	"Si.BC.FernBookName": "Fern Island Travel Brochure",
+	"Si.BC.FernBookDesc": "Book description here",
+	"Si.BC.FernBookContent": "Book contents here",
+	"Si.BC.WoodBookName": "The Fine Art Of Wood Joinery",
+	"Si.BC.WoodBookDesc": "Book description here",
+	"Si.BC.WoodBookContent": "Book contents here",
+	"Si.BC.CloakBookName": "Fine Capes and Cloaks",
+	"Si.BC.CloakBookDesc": "Book description here",
+	"Si.BC.CloakBookContent": "Book contents here",
+	"Si.BC.FireproofingBookName": "Fireproofing Your Workshop",
+	"Si.BC.FireproofingBookDesc": "Book description here",
+	"Si.BC.FireproofingBookContent": "Book contents here",
+	"Si.BC.GridballBookName": "Gridball Rulebook",
+	"Si.BC.GridballBookDesc": "Book description here",
+	"Si.BC.GridballBookContent": "Book contents here",
+	"Si.BC.GoldBookName": "Guide to Goldsmithing",
+	"Si.BC.GoldBookDesc": "Book description here",
+	"Si.BC.GoldBookContent": "Book contents here",
+	"Si.BC.CleanSpellsBookName": "Housekeeping Charms & Spells",
+	"Si.BC.CleanSpellsBookDesc": "Book description here",
+	"Si.BC.CleanSpellsBookContent": "Book contents here",
+	"Si.BC.GuineaBookName": "How to Train your Guinea Pig",
+	"Si.BC.GuineaBookDesc": "Book description here",
+	"Si.BC.GuineaBookContent": "Book contents here",
+	"Si.BC.Human101BookName": "Human 101",
+	"Si.BC.Human101BookDesc": "Book description here",
+	"Si.BC.Human101BookContent": "Book contents here",
+	"Si.BC.HumanLingoBookName": "Human Language",
+	"Si.BC.HumanLingoBookDesc": "Book description here",
+	"Si.BC.HumanLingoBookContent": "Book contents here",
+	"Si.BC.FlowerLingoBookName": "The Language of Flowers",
+	"Si.BC.FlowerLingoBookDesc": "Book description here",
+	"Si.BC.FlowerLingoBookContent": "Book contents here",
+	"Si.BC.BusBookName": "Lessons in Bus Driving",
+	"Si.BC.BusBookDesc": "Book description here",
+	"Si.BC.BusBookContent": "Book contents here",
+	"Si.BC.HomeownerBookName": "Maintenance for First-Time Homeowners",
+	"Si.BC.HomeownerBookDesc": "Book description here",
+	"Si.BC.HomeownerBookContent": "Book contents here",
+	"Si.BC.MarketArtBookName": "Marketing Art",
+	"Si.BC.MarketArtBookDesc": "Book description here",
+	"Si.BC.MarketArtBookContent": "Book contents here",
+	"Si.BC.MarnieLogBookName": "Marnie's Logbook",
+	"Si.BC.MarnieLogBookDesc": "Book description here",
+	"Si.BC.MarnieLogBookContent": "Book contents here",
+	"Si.BC.PennyBookName": "The Mystery of Firebrook Manor",
 	"Si.BC.PennyBookDesc": "Desc",
 	"Si.BC.PennyBookContent": "^^Contents",
+	"Si.BC.NatGeoBookName": "National Geography #34",
+	"Si.BC.NatGeoBookDesc": "There's a frog covered in leaves on the cover.",
+	"Si.BC.NatGeoBookContent": "^^Book contents here",
+	"Si.BC.NavBookName": "Ocean Navigation Quick Reference",
+	"Si.BC.NavBookDesc": "Book description here",
+	"Si.BC.NavBookContent": "Book contents here",
 	"Si.BC.PHBBookName": "Player's Handbook",
 	"Si.BC.PHBBookDesc": "A handbook for players of a tabletop game.",
 	"Si.BC.PHBBookContent": "^^Contents",
+	"Si.BC.PrincessBookName": "The Princess and the Sword",
+	"Si.BC.PrincessBookDesc": "Book description here",
+	"Si.BC.PrincessBookContent": "Book contents here",
+	"Si.BC.ReadersDigestBookName": "Reader's Digest",
+	"Si.BC.ReadersDigestBookDesc": "Book description here",
+	"Si.BC.ReadersDigestBookContent": "Book contents here",
+	"Si.BC.StyleBookName": "Style Magazine",
+	"Si.BC.StyleBookDesc": "Book description here",
+	"Si.BC.StyleBookContent": "Book contents here",
+	"Si.BC.CareBookName": "Taking Care of Yourself",
+	"Si.BC.CareBookDesc": "Book description here",
+	"Si.BC.CareBookContent": "Book contents here",
+	"Si.BC.ChimneyBookName": "A Tale of Two Chimneys",
+	"Si.BC.ChimneyBookDesc": "Book description here",
+	"Si.BC.ChimneyBookContent": "Book contents here",
+	"Si.BC.SoldierBookName": "Welcome Home: A Soldier's Guide to Returning to Civilian Life",
+	"Si.BC.SoldierBookDesc": "Book description here",
+	"Si.BC.SoldierBookContent": "Book contents here",
 }
