added crossover books for my other mods

--- a/[Si] Book Challenge/i18n/default.json
+++ b/[Si] Book Challenge/i18n/default.json
@@ -1,5 +1,7 @@
 {
 	// Sample length "^^Book contents here testing testing testing 1 testing testing testing 2 testing testing testing 3 testing testing testing 4 testing testing testing 5 testing testing testing 6 testing testing testing 7 testing testing testing 8 testing testing testing 9 testing testing testing 10 ^^testing testing testing 11 testing testing testing 12 testing testing testing 13",
+	// Config
+	// Base content
 	"Si.BC.SaltBookName": "101 Gourmand Tomato Salt Recipes",
 	"Si.BC.SaltBookDesc": "Book description here",
 	"Si.BC.SaltBookContent": "Book contents here",
@@ -24,6 +26,9 @@
 	"Si.BC.BetterHomesBookName": "Better Homes and Gardens New Cook Book",
 	"Si.BC.BetterHomesBookDesc": "Book description here",
 	"Si.BC.BetterHomesBookContent": "Book contents here",
+	"Si.BC.ElliotTowerBookName": "Blue Tower",
+	"Si.BC.ElliotTowerBookDesc": "This was written by Elliott!",
+	"Si.BC.ElliotTowerBookContent": "Book contents here",
 	"Si.BC.YobaBookName": "Book of Yoba",
 	"Si.BC.YobaBookDesc": "Book description here",
 	"Si.BC.YobaBookContent": "Book contents here",
@@ -33,7 +38,10 @@
 	"Si.BC.CSharpBookName": "The C# Yellow Book",
 	"Si.BC.CSharpBookDesc": "Book description here",
 	"Si.BC.CSharpBookContent": "Book contents here",
-	"Si.BC.CampfireBookName": "Camfire Cooking",
+	"Si.BC.ElliotStationBookName": "Camellia Station",
+	"Si.BC.ElliotStationBookDesc": "This was written by Elliott!",
+	"Si.BC.ElliotStationBookContent": "Book contents here",
+	"Si.BC.CampfireBookName": "Campfire Cooking: A Field Guide to Preparing Freshly Foraged Foods",
 	"Si.BC.CampfireBookDesc": "Book description here",
 	"Si.BC.CampfireBookContent": "Book contents here",
 	"Si.BC.ChickenBookName": "Chicken Rearing for Dummies",
@@ -46,7 +54,7 @@
 	"Si.BC.DMGBookDesc": "A guide for hosting a tabletop game.",
 	"Si.BC.DMGBookContent": "^^Contents",
 	"Si.BC.ToolboxBookName": "The Engineer's Toolbox",
-	"Si.BC.ToolboxBookDesc": "Book description here",
+	"Si.BC.ToolboxBookDesc": "Material properties, steam tables, and more!",
 	"Si.BC.ToolboxBookContent": "Book contents here",
 	"Si.BC.FernBookName": "Fern Island Travel Brochure",
 	"Si.BC.FernBookDesc": "Book description here",
@@ -58,7 +66,7 @@
 	"Si.BC.CloakBookDesc": "Book description here",
 	"Si.BC.CloakBookContent": "Book contents here",
 	"Si.BC.FireproofingBookName": "Fireproofing Your Workshop",
-	"Si.BC.FireproofingBookDesc": "Book description here",
+	"Si.BC.FireproofingBookDesc": "There's a warning on the back that the book itself isn't fireproof.",
 	"Si.BC.FireproofingBookContent": "Book contents here",
 	"Si.BC.GridballBookName": "Gridball Rulebook",
 	"Si.BC.GridballBookDesc": "Book description here",
@@ -91,7 +99,7 @@
 	"Si.BC.MarketArtBookDesc": "Book description here",
 	"Si.BC.MarketArtBookContent": "Book contents here",
 	"Si.BC.MarnieLogBookName": "Marnie's Logbook",
-	"Si.BC.MarnieLogBookDesc": "Book description here",
+	"Si.BC.MarnieLogBookDesc": "There's details about every animal on the farm in here!",
 	"Si.BC.MarnieLogBookContent": "Book contents here",
 	"Si.BC.PennyBookName": "The Mystery of Firebrook Manor",
 	"Si.BC.PennyBookDesc": "Desc",
@@ -111,6 +119,9 @@
 	"Si.BC.ReadersDigestBookName": "Reader's Digest",
 	"Si.BC.ReadersDigestBookDesc": "Book description here",
 	"Si.BC.ReadersDigestBookContent": "Book contents here",
+	"Si.BC.ElliotPlanetBookName": "The Rise and Fall of Planet Yazzo",
+	"Si.BC.ElliotPlanetBookDesc": "This was written by Elliott!",
+	"Si.BC.ElliotPlanetBookContent": "Book contents here",
 	"Si.BC.StyleBookName": "Style Magazine",
 	"Si.BC.StyleBookDesc": "Book description here",
 	"Si.BC.StyleBookContent": "Book contents here",
@@ -123,4 +134,23 @@
 	"Si.BC.SoldierBookName": "Welcome Home: A Soldier's Guide to Returning to Civilian Life",
 	"Si.BC.SoldierBookDesc": "Book description here",
 	"Si.BC.SoldierBookContent": "Book contents here",
+	// Si's other mods
+	"Si.BC.AAMinesBookName": "Surviving the Mines",
+	"Si.BC.AAMinesBookDesc": "Book description here",
+	"Si.BC.AAMinesBookContent": "Book contents here",
+	"Si.BC.AASwordBookName": "Sword Care and Maintenance",
+	"Si.BC.AASwordBookDesc": "Book description here",
+	"Si.BC.AASwordBookContent": "Book contents here",
+	"Si.BC.LCLeafBookName": "Trees of the Ferngill Republic",
+	"Si.BC.LCLeafBookDesc": "Book description here",
+	"Si.BC.LCLeafBookContent": "Book contents here",
+	"Si.BC.MRCleaningBookName": "How to Clean Old Buildings",
+	"Si.BC.MRCleaningBookDesc": "Book description here",
+	"Si.BC.MRCleaningBookContent": "Book contents here",
+	"Si.BC.SFSGuideBookName": "Gourmand Frog Conservation Guide",
+	"Si.BC.SFSGuideBookDesc": "Book description here",
+	"Si.BC.SFSGuideBookContent": "Book contents here",
+	"Si.BC.SFSSoilBookName": "Optimal Soil Conditions for the Anura Gourmand Frog Subspecies",
+	"Si.BC.SFSSoilBookDesc": "Book description here",
+	"Si.BC.SFSSoilBookContent": "Book contents here",
 }
