--- a/[Si] Book Challenge/i18n/default.json
+++ b/[Si] Book Challenge/i18n/default.json
@@ -21,7 +21,7 @@
 	"Si.BC.AdvHealBookDesc": "It looks like this copy has been well-thumbed through.",
 	"Si.BC.AdvHealBookContent": "Forward:^Some choose to brave the dangers of the world, fighting monsters, spirits, and the very essence of evil itself. Others prefer the safety and comfort of their clinics, where they can enjoy some nice coffee, read a good book, and wait for members of the first group to be rolled in on stretchers, wounded and regretting every decision they've ever made. If you are a member of the second group, this book is for you.",
 	"Si.BC.AardvarkBookName": "The Amazing Aardvark-Man!",
-	"Si.BC.AardvarkBookDesc": "The adventures of the astouunding superhero Aardvark-Man and his sidekick Otterboy.",
+	"Si.BC.AardvarkBookDesc": "The adventures of the astounding superhero Aardvark-Man and his sidekick Otterboy.",
 	"Si.BC.AardvarkBookContent": "Aardvark-Man whipped his head around to the source of the scream. 'Otterboy, take the Aardvark-Mobile! I'll meet you there!'^'On it!' Otterboy hopped into the Aardvark-Mobile and sped off.^Aardvark-Man shot out his elongated tongue and wrapped it around a lamp post. Once secure, he took off swinging through the night.",
 	"Si.BC.ArchGuideName": "The Archaeologist's Field Guide",
 	"Si.BC.ArchGuideDesc": "There's blades of grass and flecks of dirt between the pages.",
@@ -39,8 +39,8 @@
 	"Si.BC.ElliotTowerBookDesc": "This was written by Elliott!",
 	"Si.BC.ElliotTowerBookContent": "^Chapter One^^From the shadows emerged a man, radiating with enigmatic omniscience. 'Good Evening, Mr. Lu,' he said, the corners of his mouth quivering. Lu seemed astonished.^'How did you know my name?'",
 	"Si.BC.YobaBookName": "Book of Yoba",
-	"Si.BC.YobaBookDesc": "The symbol of the front shimmers brightly.",
-	"Si.BC.YobaBookContent": "^^And Yoba said 'may there be stardrops' and so there were stardrops.",
+	"Si.BC.YobaBookDesc": "The symbol on the front shimmers brightly.",
+	"Si.BC.YobaBookContent": "^^And Yoba said 'let there be stardrops' and so there were stardrops.",
 	"Si.BC.BookkeepingBookName": "Bookkeeping for Local Stores",
 	"Si.BC.BookkeepingBookDesc": "Helping you keep your business in the black!",
 	"Si.BC.BookkeepingBookContent": "^^In the modern day it is important for small business owners to use the tools they have at their disposal to keep up with their financials. Software that facilitates financial planning has become widely available for this purpose.",
@@ -70,7 +70,7 @@
 	"Si.BC.FernBookContent": "^^Scuba diving, dolphin watching, and incredible photographic opportunities of the Ginger Island Volcano await! Book your relaxing cruise along the Fern Islands today!",
 	"Si.BC.WoodBookName": "The Fine Art Of Wood Joinery",
 	"Si.BC.WoodBookDesc": "There's some really cool examples of carpentry in here.",
-	"Si.BC.WoodBookContent": "^^A mortise and tenon joint is a simple yet strong joint that consists of adding a projection to one piece of wood, and inserting that projecting into a groove cut out of another piece of wood so that the two pieces fit neatly together.",
+	"Si.BC.WoodBookContent": "^^A mortise and tenon joint is a simple yet strong joint that consists of adding a projection to one piece of wood, and inserting that projection into a groove cut out of another piece of wood so that the two pieces fit neatly together.",
 	"Si.BC.CloakBookName": "Fine Capes and Cloaks",
 	"Si.BC.CloakBookDesc": "There's a rather dashing cloak on the cover.",
 	"Si.BC.CloakBookContent": "^^A well-weighted cape will gently swish as you walk, and will only flare out dramatically when you intend it to do so by shifting your shoulders as you turn.",
@@ -82,7 +82,7 @@
 	"Si.BC.GridballBookContent": "^^If a member of the opposing team is holding the ball but choosing to remain stationary inside the midfield, your team is allowed to call 'Rubber Duck', rush to your team's side of the field, and begin performing the Macarena as outlined in section 8 paragraph 3C.",
 	"Si.BC.GoldBookName": "Guide to Goldsmithing",
 	"Si.BC.GoldBookDesc": "For hobby and profit.",
-	"Si.BC.GoldBookContent": "^^Abrasive materials can tarnish a gold's natural luster due to its softness. Instead, use a soft cloth or toothbrush, and dip in a muxture of warm water and mild dish soap for best results.",
+	"Si.BC.GoldBookContent": "^^Abrasive materials can tarnish a gold's natural luster due to its softness. Instead, use a soft cloth or toothbrush, and dip in a mixture of warm water and mild dish soap for best results.",
 	"Si.BC.CleanSpellsBookName": "Housekeeping Charms & Spells",
 	"Si.BC.CleanSpellsBookDesc": "The illustrations on the cover appear to be animated.",
 	"Si.BC.CleanSpellsBookContent": "^^Socks charmed to fold themselves may become confused and wind up paired with other socks than the ones they came with. To rectify this, ensure every pair of socks you own has a bright, unique pattern.",
@@ -103,9 +103,9 @@
 	"Si.BC.BusBookContent": "^^Always make sure to check your rear-view mirrors. Even after you've done that, keep your eyes and ears peeled for horns, shouting, and other indications of something behind you. A bus has many blind spots you may be unaware of.",
 	"Si.BC.HomeownerBookName": "Maintenance for First-Time Homeowners",
 	"Si.BC.HomeownerBookDesc": "Tips and tricks for keeping your house in one piece!",
-	"Si.BC.HomeownerBookContent": "^^Personal protective equipment for fireplace maintenance should include the following: a dust mask, safety goggles, work gloves, and long-sleeved shirt, pants, and footwear.",
+	"Si.BC.HomeownerBookContent": "^^Personal protective equipment for fireplace maintenance should include the following: a dust mask, safety goggles, work gloves, a long-sleeved shirt, pants, and footwear.",
 	"Si.BC.MarketArtBookName": "Marketing Art",
-	"Si.BC.MarketArtBookDesc": "Recommended by Lupini himself.",
+	"Si.BC.MarketArtBookDesc": "Recommended by Lupini himself!",
 	"Si.BC.MarketArtBookContent": "^^Always keep your audience at the focus of your marketing. Give them space to interpret the meaning of your artwork. By encouraging them to develop that interpretation, they become more likely to purchase the work for further reflection.",
 	"Si.BC.MarnieLogBookName": "Marnie's Logbook",
 	"Si.BC.MarnieLogBookDesc": "There's details about every animal on the farm in here!",
@@ -124,7 +124,7 @@
 	"Si.BC.PHBBookContent": "Your Ability Score determines how good your character is at each of the core abilities: Strength, Dexterity, Constitution, Charisma, Intelligence, and Wisdom. Having a higher score in an ability will give you higher bonuses to skills associated with that ability. For example, a high Charisma will boost your Persuasion skill.",
 	"Si.BC.PrincessBookName": "The Princess and the Sword",
 	"Si.BC.PrincessBookDesc": "A book written for children aged 4 and up.",
-	"Si.BC.PrincessBookContent": "^^Amy took the sword. 'Thank you, Miss Dragon. I will take good care of it.'^Miss Dragon smiled at Amy. 'You are welcome Princes Amy. Now you are ready to fight the evil Prince and save the kingdom.",
+	"Si.BC.PrincessBookContent": "^^Amy took the sword. 'Thank you, Miss Dragon. I will take good care of it.'^Miss Dragon smiled at Amy. 'You are welcome Princess Amy. Now you are ready to fight the evil Prince and save the kingdom.",
 	"Si.BC.ReadersDigestBookName": "Reader's Digest",
 	"Si.BC.ReadersDigestBookDesc": "In this issue: Heroic Pets, Using Laughter as Medicine, and 5 Gotoran recipies for you to try at home!",
 	"Si.BC.ReadersDigestBookContent": "^^The Zuzu City Fire Department were very confused to see a cat run up and start tugging at their boots one evening.^'We thought it wanted one of our noodle cups.' The Zuzu City Fire Chief remarked.^But it turns out Nightlight the Cat was actually trying to save her human's home, which had lit on fire due to a sparking electrical outlet.",
@@ -132,17 +132,17 @@
 	"Si.BC.ElliotPlanetBookDesc": "This was written by Elliott!",
 	"Si.BC.ElliotPlanetBookContent": "^Chapter One^^Commander Yutkin stepped through the golden archway as the airlock snapped shut behind him. Today was his first day on Planet Yazzo, and all 14 of the alliance delegates had been summoned to the Grand Spire.",
 	"Si.BC.StyleBookName": "Style Magazine",
-	"Si.BC.StyleBookDesc": "Looks like a fashion magazine",
+	"Si.BC.StyleBookDesc": "Looks like a fashion magazine.",
 	"Si.BC.StyleBookContent": "^^This season is all about scarves! A well-draped scarf will boost your confidence in any context. Try a half bow knot on a silk scarf for a classy look, or drape it over your shoulders for a fun night out!",
 	"Si.BC.CareBookName": "Taking Care of Yourself",
 	"Si.BC.CareBookDesc": "Tips for physical, mental, and emotional self-care. Remember, health is wealth!",
-	"Si.BC.CareBookContent": "^^Taking a moment for yourself is an important way to keeping your mind clear. Let's start small right now: clear your mind of any thoughts. Then slowly inhale through your nose until you feel content with how much air is in your lungs. Count to three, and then slowly let the air out throught your mouth.",
+	"Si.BC.CareBookContent": "^^Taking a moment for yourself is an important way to keeping your mind clear. Let's start small right now: clear your mind of any thoughts. Then slowly inhale through your nose until you feel content with how much air is in your lungs. Count to three, and then slowly let the air out through your mouth.",
 	"Si.BC.ChimneyBookName": "A Tale of Two Chimneys",
 	"Si.BC.ChimneyBookDesc": "Ella's first interaction with her new neighbor blossoms into something she never thought she'd find. But is it enough to overcome what's ahead?",
 	"Si.BC.ChimneyBookContent": "^^She pressed her forehead into Ella's and tangled their fingers together. 'Don't worry! We'll pull through.'^Ella smiled back, but it wasn't enough to mask the concern in her eyes.^'Just be careful, love.'",
 	"Si.BC.SoldierBookName": "Welcome Home: A Soldier's Guide to Returning to Civilian Life",
 	"Si.BC.SoldierBookDesc": "Strategies for adjusting to being back home.",
-	"Si.BC.SoldierBookContent": "^^Your family members may have difficulty understanding what you've gone through, but it's important to remember that they love you and want to help you however they can. When there's something you need, like a boundary or some space, be clear and upfront with them about that.",
+	"Si.BC.SoldierBookContent": "^^Your family members may have difficulty understanding what you've gone through, but it's important to remember that they love you and want to help you however they can. When there's something you need, like a boundary or some space, be clear and upfront with them about it.",
 	// Si's other mods
 	"Si.BC.AAMinesBookName": "Surviving the Mines",
 	"Si.BC.AAMinesBookDesc": "This looks like one of the books Marlon lent Abigail for her adventurer studies.",
