i18n'd the gift responses

--- a/[Si] Book Challenge/i18n/default.json
+++ b/[Si] Book Challenge/i18n/default.json
@@ -162,4 +162,149 @@
 	"Si.BC.SFSSoilBookName": "Optimal Soil Conditions for the Anura Gourmand Frog Subspecies",
 	"Si.BC.SFSSoilBookDesc": "A research paper on gourmand frogs.",
 	"Si.BC.SFSSoilBookContent": "^^A pH range that is neutral to slightly acidic will promote healthy growth and a welcoming reproductive atmosphere for anura gourmand frogs during the mating season.",
+	// Gift dialogue
+	"Si.BC.Abigail.book": "Thanks! Looks like an interesting book.",
+	"Si.BC.Abigail.adventure": "I like pretending to be the adventurer in these books.#$b#What choices would I make?#$b#How would I react?#$b#That sort of thing.",
+	"Si.BC.Abigail.scifi": "Do you think technology will ever get to that point?#$b#I sure hope so.",
+	"Si.BC.Abigail.mystery": "I like to think I'd be the survivor in these books.#$b#But I'd probably get killed first for being so genre-savvy.$1",
+	"Si.BC.Abigail.guild": "This should help me with my training!",
+	"Si.BC.Abigail.Bookkeeping": "Ugh, my parents keep trying to get me to read this...",
+	"Si.BC.Caroline.book": "Oh, a new book! Thank you @.",
+	"Si.BC.Caroline.travel": "Oh, the places I could go...",
+	"Si.BC.Caroline.mystery": "My, I do love a good mystery.",
+	"Si.BC.Pierre.book": "Huh, a new book! Could be useful.",
+	"Si.BC.Pierre.guide": "It's always helpful to pick up new skills.",
+	"Si.BC.Pierre.Bookkeeping": "I've been trying to get Abigail to read this. It's so applicable to stores like ours!",
+	"Si.BC.Maru.book": "Nice, a new book!",
+	"Si.BC.Maru.medical": "This will be helpful at the clinic.",
+	"Si.BC.Maru.science": "Time to broaden my scientific knowledge even more!",
+	"Si.BC.Maru.scifi": "It's fun to read others' ideas of how technology will develop in the future. Thanks @!",
+	"Si.BC.Maru.space": "I've always loved learning about space. Something about the vast cosmos just calls to me.",
+	"Si.BC.Sebastian.book": "Huh, a new book. I'll give it a shot.",
+	"Si.BC.Sebastian.game": "Great, I can use this for game night.",
+	"Si.BC.Demetrius.book": "A new book! Why thank you @.",
+	"Si.BC.Demetrius.science": "Fascinating!",
+	"Si.BC.Demetrius.culture": "I find books like these very helpful when it comes to understanding the world. Thank you @.",
+	"Si.BC.Demetrius.fiction": "I don't enjoy books like this one, but I appreciate you thinking of me @.#$b#I'll see if one of the kids would like it.",
+	"Si.BC.Robin.book": "Thanks! Looks like an interesting read.",
+	"Si.BC.Robin.sport": "You know, I loved playing team sports when I was younger.#$e#I wonder if Alex would be interested in starting a local rec league?",
+	"Si.BC.Robin.scifi": "Oh I could never turn down a good science fiction novel. Thanks @!",
+	"Si.BC.Robin.Wood": "I'm familiar with most techniques already, but maybe this book will teach me something new. You never know!",
+	"Si.BC.Sam.book": "Huh, I guess I can give this book a shot.",
+	"Si.BC.Sam.adventure": "Sweet, this looks exciting!#$b#Heroes in these books are always about saving the day and looking cool.#$b#I guess they're kind of like role models.$10",
+	"Si.BC.Sam.game": "Great! I can really use this for game night.#$b#I always forget my copies.$10",
+	"Si.BC.Sam.scifi": "Sweet, this looks exciting!#$b#I like imagining that books like this are actually biographies sent from the future.#$b#Is that weird?$10",
+	"Si.BC.Sam.comic": "Awesome, I can't wait to read this issue!",
+	"Si.BC.Vincent.book": "Huh, this book has lots of words but no pictures.",
+	"Si.BC.Vincent.adventure": "Wow, cool!#$b#My big brother likes books like this too.#$e#I'm gonna ask him to read it with me.",
+	"Si.BC.Vincent.kid": "The pictures look funny! I wonder if Miss Penny will let me use this for my next book report.",
+	"Si.BC.Jodi.book": "Oh, a new book! Thank you @.",
+	"Si.BC.Jodi.recipe": "I'll be sure to give these recipes a try!",
+	"Si.BC.Jodi.adventure": "Nothing like an adventurous chapter before bed!",
+	"Si.BC.Jodi.ReadersDigest": "I enjoy trying the recipes in these, they're always so unique!",
+	"Si.BC.Kent.book": "Hm, looks interesting.",
+	"Si.BC.Kent.guild": "Now this is a useful book. Thanks @.",
+	"Si.BC.Kent.Soldier": "...#$b#It's been hard, getting used to being home again...#$b#But maybe this will help. Thank you @.",
+	"Si.BC.Leo.book": "Wow, that's a lot of words...",
+	"Si.BC.Leo.culture": "Can this help me learn more about other kids?",
+	"Si.BC.Leo.kid": "I'm still learning how to read, but this doesn't look too hard.",
+	"Si.BC.Leo.nature1": "The plants look like the ones around my home!",
+	"Si.BC.Leo.nature2": "The plants remind me of my home!",
+	"Si.BC.Linus.book": "How kind of you @. I will enjoy reading this book.",
+	"Si.BC.Linus.nature": "Isn't nature wonderful? There's so much to learn about it.",
+	"Si.BC.Jas.book": "Thank you for the book!",
+	"Si.BC.Jas.kid": "Wow, this book looks like fun! I might do my next book report on it!",
+	"Si.BC.Jas.nature": "Wow, the pictures look so pretty!",
+	"Si.BC.Jas.Princess": "I wanna be just like Princess Amy when I grow up!",
+	"Si.BC.Shane.book": "Thanks for the book, I guess.",
+	"Si.BC.Shane.sport": "Cool, thanks.",
+	"Si.BC.Shane.selfhelp": "...#$b#I guess this could be helpful...",
+	"Si.BC.Shane.Chicken": "What? Like you weren't a dummy the first time you tried to raise a chicken.",
+	"Si.BC.Marnie.book": "A book! What a nice gesture.",
+	"Si.BC.Marnie.romance": "It's such a cute book!",
+	"Si.BC.Marnie.nature": "I love reading books like these.",
+	"Si.BC.Marnie.MarnieLog": "Oh, I must have left that lying around! Thank you @.",
+	"Si.BC.Marnie.Gold": "Oh, I know exactly who this belongs to.",
+	"Si.BC.Alex.book": "Uh, thanks! I'll see if I get around to reading it.",
+	"Si.BC.Alex.sport": "Hey, this is pretty useful! Thanks!",
+	"Si.BC.Evelyn.book": "Oh how nice, thank you dear!#$e#Now where did I put my reading glasses...",
+	"Si.BC.Evelyn.recipe": "Oh these look quite scrumptious, I'll be sure to whip you up a plate!",
+	"Si.BC.Evelyn.nature": "How wonderful, thank you dear.",
+	"Si.BC.Evelyn.ReadersDigest": "You know, these books have been coming out longer than I've been alive!",
+	"Si.BC.Evelyn.FlowerLingo": "Oh this is beautiful.#$b#George actually learned flower symbolism so he could make the most meaningful bouquets for me.#$b#I actually dried some of them so I could keep them!",
+	"Si.BC.George.book": "It's good to see you young'uns getting back into reading lately!",
+	"Si.BC.George.ReadersDigest": "I hope they never stop making these!",
+	"Si.BC.George.FlowerLingo": "Hey, I remember this!#$b#I used to make bouquets for Evelyn using these guides.#$b#Her smile was worth every flower.#$b#Still is!",
+	"Si.BC.Penny.book": "A new book? Thank you so much @! I'll let you know what I think of it.",
+	"Si.BC.Penny.medical": "While it's good to have some medical knowledge in case of emergency, it's best to leave the procedures to professionals like Harvey and Maru.",
+	"Si.BC.Penny.mystery": "What a thrilling premise! I wonder if I can figure out the mystery before it's revealed.",
+	"Si.BC.Penny.romance": "Could you imagine, being swept dreamily off your feet?#$e#I wonder if it's as magical as the books say it is.",
+	"Si.BC.Penny.adventure": "This looks exciting! I'd love to go on an adventure like this someday.",
+	"Si.BC.Penny.travel": "I wish I could plan a trip! It's so expensive though.",
+	"Si.BC.Penny.recipe": "Hmm, maybe I should try some of these recipes.",
+	"Si.BC.Penny.guide": "It could be fun to learn a new skill!",
+	"Si.BC.Penny.science": "I wonder if I can incorporate this into my lesson plan.#$b#I should talk to Maru about it.",
+	"Si.BC.Penny.space": "I wonder if I can incorporate this into my lesson plan.#$b#I should talk to Maru about it.",
+	"Si.BC.Penny.fish": "I wonder if I can incorporate this into my lesson plan.#$b#I should talk to Willy about it.",
+	"Si.BC.Penny.history": "I wonder if I can incorporate this into my lesson plan.",
+	"Si.BC.Penny.nature": "This might be a good prompt to hold a lesson outdoors on a nice day.",
+	"Si.BC.Penny.kid": "This will be perfect for my lessons!",
+	"Si.BC.Pam.book": "Thanks kid.",
+	"Si.BC.Pam.selfhelp": "Uh, thanks kid. Who knows, maybe it'll help me out.",
+	"Si.BC.Pam.adventure": "Now this looks like a fun time!",
+	"Si.BC.Pam.Bus": "Ugh, I really gotta get around to reading that at some point...",
+	"Si.BC.Sandy.book": "Thanks for the book @! It can get pretty boring out here.",
+	"Si.BC.Sandy.mystery": "I bet I can solve the mystery before the end of the book!#$e#That's right, Detective Sandy is on the case!",
+	"Si.BC.Sandy.romance": "Oooh, now THAT is a relationship premise I'd like to read!",
+	"Si.BC.Sandy.fashion": "Hmm, I wonder if I can pull off that outfit?",
+	"Si.BC.Emily.book": "Wow, a new book! Thanks @!",
+	"Si.BC.Emily.selfhelp": "I hope you're also using books like this to find yourself @.#$b#Everyone deserves to know who they are on the inside.",
+	"Si.BC.Emily.culture": "Human nature is very interesting, isn't it?",
+	"Si.BC.Emily.fashion": "These outfit designs are so inspired!",
+	"Si.BC.Emily.Crystal": "I love this! It's so helpful. Thanks for thinking of me @!",
+	"Si.BC.Haley.book": "I guess it would be nice to have some new reading material. Thanks.",
+	"Si.BC.Haley.romance": "A lot of these romance books are pretty similar, but I'm always looking for something fresh.",
+	"Si.BC.Haley.fashion": "Hmm, I should incorporate that into my look.#$e#What do you think @?",
+	"Si.BC.Haley.NatGeo": "The photography is stunning! I'm so glad they included the camera specs!",
+	"Si.BC.Haley.Cloak": "I've never seen fashion like this before.#$b#Wonder if I can start a new trend?",
+	"Si.BC.Elliott.book": "Ah, a new book! Thank you @, I shall savor every word knowing it comes recommended by you.",
+	"Si.BC.Elliott.Published": "Tell me, did you enjoy it?$1#$b#Be honest!",
+	"Si.BC.Elliott.Draft": "How did you find my draft?!$8#$b#...$2#$b#What did you think of it?$4",
+	"Si.BC.Harvey.book": "Seems like an interesting read. Thank you @.",
+	"Si.BC.Harvey.medical": "Ah, this will come in handy. Thank you @.",
+	"Si.BC.Harvey.adventure": "It's helpful to know what kind of shenanigans you adventuring types get up to so I can better treat you.",
+	"Si.BC.Harvey.travel": "I've always wanted to be a pilot you know. Travel to places like this...#$e#Perhaps someday.",
+	"Si.BC.Gus.book": "A good book is just what the cozy atmosphere of the saloon calls for!",
+	"Si.BC.Gus.recipe": "I'm always on the hunt for new recipes! Thank you @.",
+	"Si.BC.Gus.mystery": "A good mystery is as delicious as a freshly prepared meal!",
+	"Si.BC.Gus.Salt": "It's so hard to get a hold of good tomato salt these days, but the next time I do, at least I'll be prepared!",
+	"Si.BC.Lewis.book": "Nothing beats a good book!",
+	"Si.BC.Lewis.guide": "Having many skills in your belt comes in handy!#$e#'Jack of all trades, master of none, but still better than just master of one', as they say.",
+	"Si.BC.Lewis.ReadersDigest": "I swear they've been making these for over a century now, but they still never get old!",
+	"Si.BC.Lewis.Gold": "W-why would you give this to me?$2#$b#Not that I know anything about it, of course...$3",
+	"Si.BC.Clint.book": "Books are good, but I usually like to learn on the job.",
+	"Si.BC.Clint.Fireproofing": "Useful book, that one.",
+	"Si.BC.Clint.Toolbox": "Useful book, that one.",
+	"Si.BC.Clint.Arch": "Decent book, that one.",
+	"Si.BC.Clint.Crystal": "You know, Emily's into things like this.#$e#Maybe she's like a copy.",
+	"Si.BC.Clint.Gold": "Good book, that one.#$b#Nothing beats actual experience though.#$e#I could show you sometime if you want.",
+	"Si.BC.Leah.book": "Seems like a nice read. Thanks @!",
+	"Si.BC.Leah.MarketArt": "This could help me get my art out there. Thanks!",
+	"Si.BC.Leah.Wood": "There's some nice techniques in here.",
+	"Si.BC.Leah.nature": "I love reading books like these. Thanks @!",
+	"Si.BC.Willy.book": "Fair winds, calm seas, and a good book are all you need.",
+	"Si.BC.Willy.travel": "A boat 'n a good compass'll get you anywhere you want to go.",
+	"Si.BC.Willy.romance": "Now that's some nice reading for gentle waves.",
+	"Si.BC.Willy.fish": "You know, there's fish in these waters that even books like that can't tell you about.",
+	"Si.BC.Willy.Nav": "Always keep a copy handy. Never know what might happen out on the sea!",
+	"Si.BC.Wizard.book": "Ah, thank you for the book @.",
+	"Si.BC.Wizard.magic": "Be careful with tomes like that. One minute you're trying to enchant broomsticks, the next you've turned yourself into a lamp.#$e#...#$e#Don't ask me how I know that.",
+	"Si.BC.Wizard.history": "Never forget the past, @.#$b#History is fated to rhyme, and that is what it will always try to do.",
+	"Si.BC.Wizard.fashion": "...Are you trying to tell me something?",
+	"Si.BC.Dwarf.book": "I don't know how to read your language, but I might as well use this to learn.#$e#Thanks.",
+	"Si.BC.Dwarf.culture": "What a curious race, humans are.",
+	"Si.BC.Dwarf.guild": "Hm, there's some useful tips in here.",
+	"Si.BC.Krobus.book": "Oh, books! Thank you @. I'll try to keep them dry.",
+	"Si.BC.Krobus.culture": "Humans are so interesting. Thanks for helping me learn more about them @.",
+	"Si.BC.Krobus.travel": "Are these other human settlements? I wonder if I could see them someday.",
 }
