Moved i18n strings for my other mods to their respective mods; moved book pngs one pixel up

--- a/[Si] Book Challenge/i18n/default.json
+++ b/[Si] Book Challenge/i18n/default.json
@@ -29,7 +29,7 @@
 	"Si.BC.AdvHealBookContent": "Forward:^Some choose to brave the dangers of the world, fighting monsters, spirits, and the very essence of evil itself. Others prefer the safety and comfort of their clinics, where they can enjoy some nice coffee, read a good book, and wait for members of the first group to be rolled in on stretchers, wounded and regretting every decision they've ever made. If you are a member of the second group, this book is for you.",
 	"Si.BC.AardvarkBookName": "The Amazing Aardvark-Man!",
 	"Si.BC.AardvarkBookDesc": "The adventures of the astounding superhero Aardvark-Man and his sidekick Otterboy.",
-	"Si.BC.AardvarkBookContent": "Aardvark-Man whipped his head around to the source of the scream. 'Otterboy, take the Aardvark-Mobile! I'll meet you there!'^'On it!' Otterboy hopped into the Aardvark-Mobile and sped off.^Aardvark-Man shot out his elongated tongue and wrapped it around a lamp post. Once secure, he took off swinging through the night.",
+	"Si.BC.AardvarkBookContent": "^^Aardvark-Man whipped his head around to the source of the scream. 'Otterboy, take the Aardvark-Mobile! I'll meet you there!'^'On it!' Otterboy hopped into the Aardvark-Mobile and sped off.^Aardvark-Man shot out his elongated tongue and wrapped it around a lamp post. Once secure, he took off swinging through the night.",
 	"Si.BC.ArchGuideName": "The Archaeologist's Field Guide",
 	"Si.BC.ArchGuideDesc": "There's blades of grass and flecks of dirt between the pages.",
 	"Si.BC.ArchGuideContent": "^^It's important to examine the context in which an artifact was discovered. Simply plucking an object off the ground and removing it from study disturbs valuable indicators such as location, other nearby artifacts, and the nature by which it was buried, causing that information to be lost to the ages.",
@@ -150,25 +150,6 @@
 	"Si.BC.SoldierBookName": "Welcome Home: A Soldier's Guide to Returning to Civilian Life",
 	"Si.BC.SoldierBookDesc": "Strategies for adjusting to being back home.",
 	"Si.BC.SoldierBookContent": "^^Your family members may have difficulty understanding what you've gone through, but it's important to remember that they love you and want to help you however they can. When there's something you need, like a boundary or some space, be clear and upfront with them about it.",
-	// Si's other mods
-	"Si.BC.AAMinesBookName": "Surviving the Mines",
-	"Si.BC.AAMinesBookDesc": "This looks like one of the books Marlon lent Abigail for her adventurer studies.",
-	"Si.BC.AAMinesBookContent": "^^The most common creature you'll encounter in the mines are slimes. Oozing with a pungent, sticky substance, these beings can congregate together to form larger entities known for absorbing entire adventurers whole.",
-	"Si.BC.AASwordBookName": "Sword Care and Maintenance",
-	"Si.BC.AASwordBookDesc": "This looks like one of the books Marlon lent Abigail for her adventurer studies.",
-	"Si.BC.AASwordBookContent": "^^To clean the blade, apply a few drops of your selected oil solution to a cloth and gently swipe it along the metal so that you are left with a thin sheen of oil. The sword should not be dripping or excessively damp.",
-	"Si.BC.LCLeafBookName": "Trees of the Ferngill Republic",
-	"Si.BC.LCLeafBookDesc": "This book is full of information about different kinds of trees and their leaves.",
-	"Si.BC.LCLeafBookContent": "^^Maples and Oaks can be found in equal measure atop the mountains that dot the coast of the Ferngill Republic. While they take on stunning hues in the fall season, both are outnumbered by the evergreen pines that weather the cold winters.",
-	"Si.BC.MRCleaningBookName": "How to Clean Old Buildings",
-	"Si.BC.MRCleaningBookDesc": "The cover is immaculate.",
-	"Si.BC.MRCleaningBookContent": "^^To preserve old construction, avoid the use of harsh chemicals and opt for gentler solutions, including brushes and dry cloths to remove dust.",
-	"Si.BC.SFSGuideBookName": "Gourmand Frog Conservation Guide",
-	"Si.BC.SFSGuideBookDesc": "A handbook for frog conservation projects.",
-	"Si.BC.SFSGuideBookContent": "^^Healthy adult frogs should have a mix of live insects in their diet, including crickets, earthworms, caterpillars, and dragonflies.",
-	"Si.BC.SFSSoilBookName": "Optimal Soil Conditions for the Anura Gourmand Frog Subspecies",
-	"Si.BC.SFSSoilBookDesc": "A research paper on gourmand frogs.",
-	"Si.BC.SFSSoilBookContent": "^^A pH range that is neutral to slightly acidic will promote healthy growth and a welcoming reproductive atmosphere for anura gourmand frogs during the mating season.",
 	// Gift dialogue
 	"Si.BC.Abigail.book": "Thanks! Looks like an interesting book.",
 	"Si.BC.Abigail.adventure": "I like pretending to be the adventurer in these books.#$b#What choices would I make?#$b#How would I react?#$b#That sort of thing.",
