Added stock limits to shops, fixed some excerpt margins, and changed order of acceptgift lines for tag priority - spec books first, tags second in order of specificity, then bc_books tag

--- a/[Si] Book Challenge/i18n/default.json
+++ b/[Si] Book Challenge/i18n/default.json
@@ -128,7 +128,7 @@
 	"Si.BC.NavBookContent": "^^When facing towards the front of the boat (known as the 'bow'), on your left is the 'port' side and on your right is the 'starboard' side. Behind you is the 'stern'. 'Windward' is the direction the wind is coming from, while 'leeward' is the direction the wind is headed to.",
 	"Si.BC.PHBBookName": "Player's Handbook",
 	"Si.BC.PHBBookDesc": "A handbook for players of a tabletop game.",
-	"Si.BC.PHBBookContent": "Your Ability Score determines how good your character is at each of the core abilities: Strength, Dexterity, Constitution, Charisma, Intelligence, and Wisdom. Having a higher score in an ability will give you higher bonuses to skills associated with that ability. For example, a high Charisma will boost your Persuasion skill.",
+	"Si.BC.PHBBookContent": "^^Your Ability Score determines how good your character is at each of the core abilities: Strength, Dexterity, Constitution, Charisma, Intelligence, and Wisdom. Having a higher score in an ability will give you higher bonuses to skills associated with that ability. For example, a high Charisma will boost your Persuasion skill.",
 	"Si.BC.PrincessBookName": "The Princess and the Sword",
 	"Si.BC.PrincessBookDesc": "A book written for children aged 4 and up.",
 	"Si.BC.PrincessBookContent": "^^Amy took the sword. 'Thank you, Miss Dragon. I will take good care of it.'^Miss Dragon smiled at Amy. 'You are welcome Princess Amy. Now you are ready to fight the evil Prince and save the kingdom.",
