--- a/[Si] Book Challenge/i18n/default.json
+++ b/[Si] Book Challenge/i18n/default.json
@@ -159,6 +159,7 @@
 	"Si.BC.Abigail.mystery": "I like to think I'd be the survivor in these books.#$b#But I'd probably get killed first for being so genre-savvy.$1",
 	"Si.BC.Abigail.guild": "This should help me with my training!",
 	"Si.BC.Abigail.Bookkeeping": "Ugh, my parents keep trying to get me to read this...",
+	"Si.BC.Abigail.Guinea": "I've been trying to teach David some tricks, but all he cares about is the treat.",
 	"Si.BC.Caroline.book": "Oh, a new book! Thank you @.",
 	"Si.BC.Caroline.travel": "Oh, the places I could go...",
 	"Si.BC.Caroline.mystery": "My, I do love a good mystery.",
