Guess I'm adding more books now

--- a/[Si] Book Collecting/i18n/default.json
+++ b/[Si] Book Collecting/i18n/default.json
@@ -140,8 +140,8 @@
 	"Si.BC.ElliotPlanetBookName": "The Rise and Fall of Planet Yazzo",
 	"Si.BC.ElliotPlanetBookDesc": "This was written by Elliott!",
 	"Si.BC.ElliotPlanetBookContent": "^Chapter One^^Commander Yutkin stepped through the golden archway as the airlock snapped shut behind him. Today was his first day on Planet Yazzo, and all 14 of the alliance delegates had been summoned to the Grand Spire.",
-	"Si.BC.StyleBookName": "Style Magazine",
-	"Si.BC.StyleBookDesc": "Looks like a fashion magazine.",
+	"Si.BC.StyleBookName": "Super Fashion Girl Magazine",
+	"Si.BC.StyleBookDesc": "Looks like a clothing magazine.",
 	"Si.BC.StyleBookContent": "^^This season is all about scarves! A well-draped scarf will boost your confidence in any context. Try a half bow knot on a silk scarf for a classy look, or drape it over your shoulders for a fun night out!",
 	"Si.BC.CareBookName": "Taking Care of Yourself",
 	"Si.BC.CareBookDesc": "Tips for physical, mental, and emotional self-care. Remember, health is wealth!",
